--- a/XmaxTree.ipynb
+++ b/XmaxTree.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 19,
    "outputs": [],
    "source": [
-    "import turtle as t  # as就是取个别名，后续调用的t都是turtle\n",
+    "import turtle as t\n",
     "from turtle import *\n",
     "import random as r"
    ],
@@ -22,9 +22,9 @@
    "outputs": [],
    "source": [
     "n = 100.0\n",
-    "t.pensize(10) # 修改画笔大小\n",
-    "speed(\"fastest\")  # 定义速度\n",
-    "screensize(bg='lightcoral')  # 定义背景颜色，可以自己换颜色"
+    "t.pensize(10) # 画笔大小\n",
+    "speed(\"fastest\")  # 速度\n",
+    "screensize(bg='lightcoral')  # 背景颜色"
    ],
    "metadata": {
     "collapsed": false,
